manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app.kubernetes.io/name: solobit-landing
  name: solobit-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: solobit-landing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: solobit-landing
    spec:
      containers:
      - image: docker.io/solobit-landing/solobit-landing
        name: solobit-landing
