manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solobit-landing
  labels:
    app.kubernetes.io/name: solobit-landing
spec:
  selector:
    app.kubernetes.io/name: solobit-landing
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
